add osx support to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
 language: c
 compiler: gcc
 
+os:
+    - linux
+    - osx
+
 sudo: required
 
 before_install:
-    # Required to obtain libglfw3-dev
-    - sudo add-apt-repository 'deb http://archive.ubuntu.com/ubuntu xenial main universe'
-    - sudo apt-get -qq update
-    - sudo apt-get install -y libglfw3-dev libfreetype6-dev
+    # Required to obtain libglfw3-dev on Travis's Ubuntu.
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository 'deb http://archive.ubuntu.com/ubuntu xenial main universe'; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y libglfw3-dev libfreetype6-dev; fi
+    # OSX installation.
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install glfw freetype; fi
 
 install: make
 
